finder is ready